<resources>
    <string name="app_name">Volquetes Sergio</string>
    <string name="bienvenido">Bienvenido a parking system</string>
    <string name="inicia"></string>
    <string name="inicia_sesion">Iniciar Sesion</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="home">Inicio</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_principal">Inicio</string>
    <string name="title_activity_tabbedCliente">TabbedActivityCliente</string>
    <string name="title_activity_tabbedVolquete">TabbedActivityVolquete</string>
    <string name="title_activity_tabbedReservas">TabbedActivityReservas</string>
    <string name="tab_text_1">Agregar</string>
    <string name="tab_text_2">Modificar</string>
    <string name="tab_text_3">Listar</string>
    <string name="tab_text_4">Borrar</string>
    <string name="NOMBRE_CLIENTE">Nombre Cliente</string>
    <string name="direcc_CLIENTE">Dirección Cliente</string>
    <string name="tel_particular_CLIENTE">Tel. Paticular</string>
    <string name="tel_laboral_CLIENTE">Tel. Laboral</string>
    <string name="tel_cel_CLIENTE">Celular</string>
    <string name="email_CLIENTE">E-Mail</string>
    <string name="CUIT_CLIENTE">CUIT</string>
    <string name="AGREGAR">AGREGAR</string>
    <string name="BUSCAR">BUSCAR</string>
    <string name="MODIFICAR">MODIFICAR</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="ID_CLIENTE">ID Cliente</string>
    <string name="codigo_CLIENTE">CODIGO Cliente</string>
    <string name="codigo_volquete">CODIGO Volquete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa">Map</string>
    <string name="tab_text_reserva_1">ALTA</string>
    <string name="tab_text_reserva_2">MODIFICAR</string>
    <string name="tab_text_reserva_3">FINALIZAR</string>
    <string name="borrar">BORRAR</string>
    <string name="consultar">CONSULTAR</string>
    <string name="PRECIO">Precio $</string>
    <string name="forma_pago">Seleccione forma Pago: </string>
    <string name="zona">Seleccione zona: </string>
    <string name="fecha_selecionar">Abrir Calendario</string>
    <string name="fecha_entrega">Fecha Entrega</string>
    <string name="fecha_desde">Fecha Desde</string>
    <string name="fecha_hasta">Fecha Hasta</string>
    <string name="title_activity_reportes_principal">REPORTES</string>
    <string name="btn_reporte1">STOCK VOLQUETES</string>
    <string name="btn_reporte2">RESERVAS POR CLIENTE</string>
    <string name="btn_reporte3">RESERVAS POR FECHA</string>
    <string name="btn_reporte4">MONTO ACUMULADO POR CLIENTE</string>
    <string name="title_activity_reporte1">STOCK VOLQUETES</string>
    <string name="title_activity_reporte2">RESERVAS POR CLIENTE</string>
    <string name="title_activity_reporte3">RESERVAS POR FECHA</string>
    <string name="DISPONIBLES">STOCK DISPONIBLE:</string>
    <string name="cantidad_reservas">CANTIDAD DE RESERVAS DEL CLIENTE:</string>
    <string name="RESERVADOS">STOCK RESERVADOS:</string>
    <string name="inicio">Volver al inicio</string>
    <string name="pesos">$</string>
</resources>
