<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/huella_small"
    tools:context=".swipview.Cliente.Cliente.AgregarClienteFragment">

    <Button
        android:id="@+id/btn_agregar_cliente_alta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="340dp"
        android:onClick="Alta"
        android:text="@string/AGREGAR" />

    <EditText
        android:id="@+id/direccion_cliente_alta"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvw xyz1234567890"
        android:ems="10"
        android:hint="@string/direcc_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/tel_particular_cliente_alta"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="250dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/tel_particular_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/tel_laboral_cliente_alta"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/tel_laboral_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/celular_cliente_alta"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/tel_cel_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/email_cliente_alta"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/email_CLIENTE"
        android:inputType="textEmailAddress"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/cuit_cliente_alta"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="155dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/CUIT_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/nombre_cliente_alta"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefgh ijklmnopqrstuvwxyz"
        android:ems="10"
        android:hint="@string/NOMBRE_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/codigo_cliente_alta"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="340dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz123456789"
        android:ems="10"
        android:hint="@string/codigo_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp" />

</FrameLayout>