<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".swipview.Cliente.Cliente.ModificarClienteFragment">

    <EditText
        android:id="@+id/codigo_cliente_modif"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="11dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz123456789"
        android:ems="10"
        android:hint="@string/codigo_CLIENTE"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_buscar_id_cliente_modif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="11dp"
        android:onClick="BuscarCliente"
        android:text="@string/BUSCAR" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/cinta_small" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:src="@drawable/cinta_small" />


    -----

    <Button
        android:id="@+id/btn_modificar_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="325dp"
        android:onClick="ModificarCliente"
        android:text="@string/MODIFICAR" />

    <EditText
        android:id="@+id/direccion_cliente_modif"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuv wxyz1234567890"
        android:ems="10"
        android:hint="@string/direcc_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/tel_particular_cliente_modif"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="280dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/tel_particular_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/tel_laboral_cliente_modif"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="325dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/tel_laboral_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <ImageButton
        android:id="@+id/btn_borrar_cliente"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="368dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="BorrarCliente"
        android:src="@drawable/baja" />

    <EditText
        android:id="@+id/celular_cliente_modif"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="240dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/tel_cel_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_cliente_alta" />

    <EditText
        android:id="@+id/email_cliente_modif"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/email_CLIENTE"
        android:inputType="textEmailAddress"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/cuit_cliente_modif"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/CUIT_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/nombre_cliente_modif"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijkl mnopqrstuvwxyz"
        android:ems="10"
        android:hint="@string/NOMBRE_CLIENTE"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    ----





</FrameLayout>