<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".swipview.Cliente.Reportes.reporte2"
    tools:showIn="@layout/activity_reporte2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".swipview.Cliente.Reportes.reporte2.ListarReporte2Fragment">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:src="@drawable/cinta_small" />

        <EditText
            android:id="@+id/codigo_cliente_listar_reporte2"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefgh ijklmnopqrstuvwxyz1234567890"
            android:ems="10"
            android:hint="@string/codigo_CLIENTE"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/cinta_small" />

        <Button
            android:id="@+id/btn_buscar_cliente_listar_reporte2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="11dp"
            android:onClick="BuscarClienteReporte2"
            android:text="@string/BUSCAR" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="85dp"
            android:text="@string/cantidad_reservas" />


        <EditText
            android:id="@+id/TXT_CANTIDAD_RESERVAS_CLIENTES"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="85dp"
            android:clickable="false"
            android:editable="false"
            android:visibility="visible"
            tools:visibility="visible" />

        <ListView
            android:id="@+id/ListaClientesReservasReporte2"
            android:layout_width="match_parent"
            android:layout_height="393dp"
            android:layout_marginTop="150dp"
            android:paddingTop="80dp" />

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>