<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".swipview.Cliente.Reportes.reporte4"
    tools:showIn="@layout/activity_reporte4">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".swipview.Cliente.Reportes.reporte4.ListarReporte4Fragment">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:src="@drawable/cinta_small" />

        <EditText
            android:id="@+id/codigo_cliente_listar_reporte4"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefgh ijklmnopqrstuvwxyz1234567890"
            android:ems="10"
            android:hint="@string/codigo_CLIENTE"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/cinta_small" />

        <Button
            android:id="@+id/btn_buscar_cliente_listar_reporte4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="11dp"
            android:onClick="BuscarClienteReporte4"
            android:text="@string/BUSCAR" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="165dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="85dp"
            android:text="@string/btn_reporte4" />

        <EditText
            android:id="@+id/TXT_MONTO_RESERVAS_CLIENTES"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="85dp"
            android:clickable="false"
            android:editable="false"
            android:visibility="visible"
            tools:visibility="visible" />

        <ListView
            android:id="@+id/ListaClientesReservasReporte4"
            android:layout_width="match_parent"
            android:layout_height="393dp"
            android:layout_marginTop="150dp"
            android:cacheColorHint="@android:color/holo_red_dark"
            android:clickable="true"
            android:divider="@android:color/holo_red_dark"
            android:dividerHeight="4dp"
            android:paddingTop="75dp"/>



    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>